--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
 	"require": {
 		"php": ">=5.4",
 		"contao/core-bundle": "~3.5 || ~4.1",
-		"contao-community-alliance/composer-plugin": "~2.4 || ~3.0"
-	},
+		"contao-community-alliance/composer-plugin": "~2.4 || ~3.0",
+      	"ext-json": "*"
+    },
 	"require-dev": {
 		"contao/easy-coding-standard": "^3.0",
 		"phpunit/phpunit": "^8.5 || ^9.5",
